--- a/style.css
+++ b/style.css
@@ -133,9 +133,6 @@
     color: #70b3e1;
 }
 
-.logo img{
-    width: 10rem;
-}
 
 img{
     display: flex;
@@ -174,21 +171,18 @@ header nav{
     display: flex;
     align-items: center;
     padding: 0 10% 0 10%;
-    height: 8rem;
+    height: 80px;
     justify-content: space-between;
-    background: transparent;
+    background: #f3f4f6;
     transition: 0.5s ease;
     z-index: 10;
 }
-header nav:hover{
-    background-color: var(--white);
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-}
+
 
 
 header nav .logo{
-    width: 15rem;
-    height: 5rem;
+    width: 150px;
+    height: 50px;
     background: url(assets/logo.png) no-repeat;
     background-size: contain;
     margin-bottom: 20px;
@@ -202,7 +196,7 @@ header nav .logo{
     flex-direction: column;
     justify-content: space-evenly;
     list-style: none;
-    padding: 1rem;
+    padding: 10px;
     border-radius: 1rem;
     background-color: #f3f4f6;
     height: 100dvh;
@@ -211,16 +205,16 @@ header nav .logo{
 .nav_links.open{
     right: 0;
 }
-.nav_links li{
+.down_list li{
     margin-left: 5rem;
 }
 .nav_btn{
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
+        position: fixed;
+        top: 5px;
+        right: 5px;
         width: fit-content;
-        height: 3rem;
-        width: 3rem;
+        height: 50px;
+        width: 80px;
         border-radius: 1rem;
         border: none;
         background-color: var(--primary-light);
@@ -243,7 +237,20 @@ header nav .logo{
 .down_list li{
     margin-top: 1rem;
 }
-
+.down_list li a svg:hover {
+    animation: picto .5s;
+}
+@keyframes picto{
+    0%{
+        transform: translateX(0px) rotate(0deg);
+    }
+    50%{
+        transform: translateX(30px) rotate(15deg);
+    }
+    100%{
+         transform: translateX(0px) rotate(0deg);
+    }
+}
 
 .nav_links li a{
     text-decoration: none;
@@ -259,158 +266,9 @@ header nav .logo{
 header .background_video{
     position: absolute;
     top: 0;
-    max-width: 100%;
+    width: 100%;
     z-index: -1;
 }
-/*
-nav{
-    position: fixed;
-    isolation: isolate;
-    top: 0;
-    width: 100%;
-    z-index: 9;
-}
-
-.nav_header{
-    padding: 1rem;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: var(--primary-color);
-}
-
-.nav_logo .logo{
-    font-size: 1.5rem;
-    color: var(--white);
-
-}
-
-.nav_menu_btn{
-    font-size: 1.5rem;
-    color: var(--white);
-    cursor: pointer;
-}
-
-.nav_links{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    grid-area: 2rem;
-    background-color: var(--white);
-    transition: transform 0.5s;
-    z-index: -1;
-
-}
-.nav_links ul{
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav_links.open{
-    transform: translateY(100%);
-    justify-content: space-evenly;
-    height: 50dvh;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-
-}
-
-
-.nav_btns{
-    display: none;
-}
-
-.nav_links a{
-    font-weight: 600;
-    color: var(--primary-color);
-    white-space: nowrap;
-}
-
-.nav_links a:hover{
-    color: var(--primary-color-darl);
-}
-
-header{
-    margin-top: 6rem;
-    position: relative;
-    isolation: isolate;
-    overflow: hidden;
-    background: var(--primary-color-darl);
-}
-
-
-.header_container{
-    display: grid;
-    overflow: hidden;
-}
-
-.header_content{
-    padding: 4rem 1rem;
-}
-
-.header_content p{
-    margin-bottom: 5px;
-    font-size: 1rem;
-    font-weight: 600;
-    color: var(--text-dark); 
-    text-align: center;
-}
-
-.header_content h1{
-    margin-bottom: 2rem;
-    font-size: 4rem;
-    white-space: nowrap;
-    font-weight: 600;
-    color: var(--white);
-    line-height: 5.5rem ;
-    text-align: center;
-    font-style: italic;
-}
-
-.header_content h1 span{
-    color: #70b3e1;
-}
-
-.header_btns{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-}
-
-.header_btns .btn{
-    padding: 1rem 2rem;
-}
-
-.header_btns a{
-    padding: 9px 13px;
-    font-size: 1.5rem;
-    color: var(--primary-color);
-    background-color: var(--white);
-    border-radius: 100%;
-}
-.header_btns span{
-    color: var(--white);
-    font-size: 2rem;
-    border-radius: 100%;
-    transition: ease-in-out .5s;
-}
-.header_btns:hover span{
-    transform: translateX(5px);
-    color: var(--primary-color);
-}
-
-.header_btns a:hover{
-    color: var(--white);
-    background-color: var(--primary-color);
-}
-*/
 
 
 .destination_container :is(.section_header, .section_description){
@@ -700,11 +558,11 @@ header{
     font-size: 1rem;
 }
 .client_container{
-            background-color: #f3f4f6;
-            border-radius: 1rem 1rem 0 0;
-            box-shadow: 5px 5px 20px rgba(0, 0, 0, .2);
-            border-bottom: 2px solid var(--primary-color);
-            color: var(--primary-color);
+    background-color: #f3f4f6;
+    border-radius: 1rem 1rem 0 0;
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, .2);
+    border-bottom: 2px solid var(--primary-color);
+    color: var(--primary-color);
 }
 
 .swiper{
@@ -882,6 +740,7 @@ footer{
 }
 
 @media (width < 540px){
+    
     body 
         h1{
         font-size: 3rem !important;
@@ -889,14 +748,46 @@ footer{
         h2{
             font-size: 1.5rem !important;
         }
+     .nav_links{
+            padding: 0;
+            margin: 0;
+        }
+ .down_list li a{
+    height: 30px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
+}
+.down_list li a svg{
+    height: 20px;
+    width: 50px;
+}
     
 }
 
 @media (width > 540px) {
-    
-
-
-
+.nav_btn{
+        top: 15px;
+        right: 15px;
+        width: fit-content;
+        height: 50px;
+        width: 80px;
+        border-radius: 1rem;
+        border: none;
+        background-color: var(--primary-light);
+        z-index: 5;
+        color: var(--extra-lights);
+}
+ .down_list li a{
+    height: 30px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
+}
+.down_list li a svg{
+    height: 20px;
+    width: 50px;
+}
     .destination_grid{
         grid-template-columns: repeat(2, 1fr);
     }
@@ -925,111 +816,34 @@ footer{
     .footer_col:last-child{
         grid-area: 2/1/3/2;
     }
+
+
+    
+
+
 }
 
 @media (width > 768px){
-    /*
-    
-    nav{
-        position: static;
-        padding: 2rem 1rem;
-        max-width: var(--max-width);
-        margin-inline: auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 2rem;
-    }
+li a{
+    font-size: 1rem !important;
+}
+nav{
+    position: absolute;
+    width: 100% !important;
+    height: 120px !important;
+    margin: 0;
+    display: flex;
+    padding: 30px !important;
+    justify-content: space-between !important;
+    background: none !important;
+ 
+}
 
-    .nav_header{
-        flex: 1;
-        padding: 0;
-        background-color: transparent;
-    }
-
-    .nav_logo .logo{
-        color: var(--text-dark);
-    }
-
-    .nav_menu_btn{
-        display: none;
-    }
-
-    .nav_links{
-        position: static;
-        width: fit-content;
-        padding: 0;
-        flex-direction: row;
-        background-color: transparent;
-        transform: none !important;
-        gap: 2rem;
-    }
-    .nav_links a{
-        color: var(--primary-color);
-    }
-
-    .nav_link
-    .nav_links a:hover{
-        color: var(--primary-color);
-    }
-
-    .nav_links li:last-child{
-        display: none;
-    }
-
-    .nav_btns{
-        flex: 1;
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .nav_btns button{
-        padding: .75rem 2rem;
-    }
-
-    header{
-        margin-top: 0;
-    }
-
-    .header_container{
-        grid-template-columns: minmax(0, 1fr)
-        repeat(5 , minmax(0, calc(var(--max-width) / 5)))
-        minmax(0, 1fr);
-    }
-
-    .header_content{
-        grid-column: 2/4;
-        padding-block: 8rem;
-    }
-
-    .header_content :is(p, h1){
-        justify-content: flex-start;
-    }
-
-    .header_image{
-        grid-column: 4/8;
-        position: relative;
-        isolation: isolate;
-        height: 100%;
-        z-index: -1;
-    }
-
-    .header_image img{
-        position: absolute;
-        top: 2rem;
-        right: 0px;
-        height: 100%;
-        width: unset;
-    }
-
-    */
-
-
-    .nav_links{
-        position: relative;
+.nav_links{
+    position: relative;
+    width: 600px;
     right: auto;
     height: auto;
-    width: 800px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -1038,6 +852,43 @@ footer{
     padding: 1rem;
     border-radius: 1rem;
 }
+nav:hover{
+    background-color: var(--white) !important;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.down_list{
+    position: absolute;
+    flex-direction: row;
+    left: calc(-100vw + 600px + 13px)  ;
+    width: 100vw;
+    height: 30vh;
+    display: none;
+    list-style: none;
+    justify-content: space-evenly;
+    background: #f3f4f6bb;
+    backdrop-filter: blur(20px);
+    margin-top: 3rem;
+    border-top: 1px solid var(--primary-light);
+    transition-delay: .5s;
+    transition: .5s ease;
+    opacity: 1;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+}
+.down_list li{
+    width: 20%;
+    height: 25vh;
+    text-align: center;
+}
+.down_list li a{
+    height: 25vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.down_list li a svg{
+    height: 10vh;
+}
 .nav_links li{
     margin-left: 0;
 }
@@ -1045,25 +896,6 @@ footer{
     display: none;
 }
 
-    .down_list{
-    position: absolute;
-    flex-direction: row;
-    left: calc(- 12rem - 30%);
-    width: 100vw;
-    height: 50vh;
-    display: none;
-    list-style: none;
-    justify-content: space-evenly;
-    background: #f3f4f6bb;
-    backdrop-filter: blur(20px);
-    margin-top: 3rem;
-    padding: 3rem 0 3rem 0;
-    border-top: 1px solid var(--primary-light);
-    transition-delay: .5s;
-    transition: .5s ease;
-    opacity: 1;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-}
 
     .down_list li a{
     font-size: 2rem !important;
@@ -1081,7 +913,6 @@ header nav:hover ul li a{
     font-weight: 600;
     color: var(--white);
 }
-
     .destination_grid{
         grid-template-columns: repeat(3, 1fr);
     }
@@ -1114,14 +945,12 @@ header nav:hover ul li a{
         grid-area: unset;
     }
 
+
 }
 
 @media (width > 1200px){
-    .header_content{
-        padding-inline: 1rem 0 ;
-    }
-
-    .destination_grid{
-        gap: 2rem;
+    header nav{
+    display: flex;
+    padding: 1rem;
     }
 }
