--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
 }
 .lock{
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -162,9 +162,9 @@ body{
 }
 
 header{
-    width: 100%;
-    height: 110dvh;
-    overflow: hidden;
+    position: relative;
+    top: 0;
+    z-index: 5;
 }
 
 header nav{
@@ -207,6 +207,9 @@ header nav .logo{
 }
 .down_list li{
     margin-left: 5rem;
+}
+.down_list li a h4{
+    
 }
 .nav_btn{
         position: fixed;
@@ -265,9 +268,15 @@ header nav .logo{
 
 header .background_video{
     position: absolute;
+    display: flex;
     top: 0;
     width: 100%;
     z-index: -1;
+}
+ .wave{
+    margin-top: 55vw;
+    width: 100%;
+
 }
 
 
@@ -284,6 +293,7 @@ header .background_video{
     font-weight: 600;
     color: var(--primary-color-darl);
 }
+
 
 .destination_grid{
     margin-top: 4rem;
@@ -748,10 +758,21 @@ footer{
         h2{
             font-size: 1.5rem !important;
         }
+        .home{
+            height: 70vh;
+        }
      .nav_links{
             padding: 0;
             margin: 0;
         }
+        header{
+            height: 60vh;
+        }
+         .wave{
+            margin-top: -50px;
+    width: 100%;
+
+}
  .down_list li a{
     height: 30px;
     display: flex;
@@ -785,8 +806,9 @@ footer{
     justify-content: left;
 }
 .down_list li a svg{
-    height: 20px;
-    width: 50px;
+
+    width: 20vw;
+    max-height: 100px;
 }
     .destination_grid{
         grid-template-columns: repeat(2, 1fr);
@@ -885,9 +907,7 @@ nav:hover{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-}
-.down_list li a svg{
-    height: 10vh;
+    align-items: center;
 }
 .nav_links li{
     margin-left: 0;
