--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
 }
 .lock{
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -240,7 +240,10 @@ header nav .logo{
 .down_list li{
     margin-top: 1rem;
 }
-.down_list li a svg:hover {
+.down_list li a img {
+    fill: #090d28;
+}
+.down_list li a img:hover {
     animation: picto .5s;
 }
 @keyframes picto{
@@ -267,14 +270,27 @@ header nav .logo{
 }
 
 header .background_video{
-    position: absolute;
     display: flex;
     top: 0;
     width: 100%;
     z-index: -1;
 }
+.head_banner{
+    width: 100%;
+    max-height: 100vh;
+    image-rendering:crisp-edges;
+
+}
+.banner_img{
+    position: relative;
+    z-index: -5;
+}
+.imgbtn{
+    position: absolute;
+    bottom: -1px;
+    height: auto;
+}
  .wave{
-    margin-top: 55vw;
     width: 100%;
 
 }
@@ -342,6 +358,42 @@ header .background_video{
 
 .slogram.fishseafood{
     background: url(assets/fish_seafood.jpg);
+    padding-inline: 1rem;
+    margin: auto;
+    height: 500px;
+    width: 98%;
+    display: flex;
+    flex-direction: column;
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    border-radius: 5rem;  
+    background-attachment: fixed;
+    background-position: right;
+
+}
+.slogram.dough{
+    background: url(assets/0e30f2931f2c2190d1f00113c6724d60.jpg);
+    padding-inline: 1rem;
+    margin: auto;
+    height: 500px;
+    width: 98%;
+    display: flex;
+    flex-direction: column;
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    border-radius: 5rem;  
+    background-attachment: fixed;
+    background-position: right;
+
+}
+.slogram.poultry{
+    background: url(assets/Poultry.jpg);
     padding-inline: 1rem;
     margin: auto;
     height: 500px;
@@ -768,6 +820,7 @@ footer{
 
 }
 
+
 @media (width < 540px){
     
     body 
@@ -780,16 +833,13 @@ footer{
         .home{
             height: 70vh;
         }
-     .nav_links{
+        .nav_links{
             padding: 0;
             margin: 0;
         }
         header{
             height: 60vh;
         }
-         .wave{
-            margin-top: -50px;
-    width: 100%;
 
 }
  .down_list li a{
@@ -797,13 +847,13 @@ footer{
     display: flex;
     flex-direction: row-reverse;
     justify-content: left;
+    gap: 10px;
 }
-.down_list li a svg{
+.down_list li a img{
     height: 20px;
-    width: 50px;
+    max-width: 50px;
 }
     
-}
 
 @media (width > 540px) {
 .nav_btn{
@@ -824,11 +874,11 @@ footer{
     flex-direction: row-reverse;
     justify-content: left;
 }
-.down_list li a svg{
-
-    width: 20vw;
-    max-height: 100px;
+.down_list li a img{
+    height: 70px;
+    max-width: 150px;
 }
+
     .destination_grid{
         grid-template-columns: repeat(2, 1fr);
     }
