--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
     box-sizing: border-box;
 }
 .lock{
-    display: flex;
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -244,6 +244,7 @@ header nav .logo{
 .down_list li a img:hover {
     animation: picto .5s;
 }
+
 @keyframes picto{
     0%{
         transform: translateX(0px) rotate(0deg);
@@ -287,7 +288,6 @@ header .background_video{
     position: relative;
     z-index: -5;
     overflow: hidden;
-
 }
 .banner_img.poultry{
     background: url(assets/Poultry.jpg) no-repeat;
@@ -973,6 +973,9 @@ body
 li a{
     font-size: 1rem !important;
     }
+li a h4{
+    font-size: 1rem;
+}
 nav{
     position: absolute;
     width: 100% !important;
@@ -1064,6 +1067,64 @@ nav:hover .nav_links{
     font-size: 2rem !important;
     font-weight: 600 !important;
     color: var(--primary-color) !important;
+
+}
+.down_list li a h4{
+    position: relative;
+    text-wrap: nowrap;
+}
+.down_list li a h4::after{
+    content: "";
+    position: absolute;
+    bottom: -5px;
+    right: 0;
+    width: 50%;
+    height: 2px;
+    background: red;
+    border-radius: 1rem;
+        transition: 1s ease;
+}
+.down_list li a:hover h4::after{
+    width: 10%;
+    background: var(--primary-color-darl);
+}
+.down_list li a:hover h4::before{
+    background: var(--primary-color-darl);
+}
+.thermometer{
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    background: var(--primary-color);
+    width: 100%;
+    height: 6px;
+    border-radius: 1rem;
+}
+.thermometer::after{
+    content: "";
+    position: absolute;
+    right: -3px;
+    bottom: -3px;
+    background: var(--primary-color);
+    width: 12px;
+    height: 12px;
+    border-radius: 5px;
+}
+.thermometer::before{
+    content: "";
+    position: absolute;
+    right: -3px;
+    bottom: -3px;
+    background: red;
+    width: 8px;
+    height: 8px;
+    transform: translate(-2px, -2px);
+    border-radius: 5px;
+    z-index: 5;
+    transition: 1s ease;
+}
+.down_list li a:hover .thermometer::before{
+    background: var(--primary-color-darl);
 }
 
 header nav:hover ul li a{
